// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component renders body2 correctly 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-9 MuiTypography-body2"
    data-testid="typography"
  >
    Hello World
  </p>
</div>
`;

exports[`Typography component renders body3 correctly 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-17 Typography-body3-18 MuiTypography-body2"
    data-testid="typography"
  >
    Hello World
  </p>
</div>
`;

exports[`Typography component renders button correctly 1`] = `
<div>
  <span
    class="MuiTypography-root Typography-root-97 MuiTypography-button"
    data-testid="typography"
  >
    Button
  </span>
</div>
`;

exports[`Typography component renders caption correctly 1`] = `
<div>
  <span
    class="MuiTypography-root Typography-root-105 MuiTypography-caption"
    data-testid="typography"
  >
    Caption
  </span>
</div>
`;

exports[`Typography component renders correctly 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-1 MuiTypography-body1"
    data-testid="typography"
  >
    Hello World
  </p>
</div>
`;

exports[`Typography component renders h1 correctly 1`] = `
<div>
  <h1
    class="MuiTypography-root Typography-root-25 MuiTypography-h1"
    data-testid="typography"
  >
    Heading
  </h1>
</div>
`;

exports[`Typography component renders h1 with underline 1`] = `
<div>
  <h1
    class="MuiTypography-root Typography-root-33 Typography-underline-35 MuiTypography-h1"
    data-testid="typography"
  >
    Heading
  </h1>
</div>
`;

exports[`Typography component renders h2 correctly 1`] = `
<div>
  <h2
    class="MuiTypography-root Typography-root-41 MuiTypography-h2"
    data-testid="typography"
  >
    Heading
  </h2>
</div>
`;

exports[`Typography component renders h3 correctly 1`] = `
<div>
  <h3
    class="MuiTypography-root Typography-root-49 MuiTypography-h3"
    data-testid="typography"
  >
    Heading
  </h3>
</div>
`;

exports[`Typography component renders h4 correctly 1`] = `
<div>
  <h4
    class="MuiTypography-root Typography-root-57 MuiTypography-h4"
    data-testid="typography"
  >
    Heading
  </h4>
</div>
`;

exports[`Typography component renders h5 correctly 1`] = `
<div>
  <h5
    class="MuiTypography-root Typography-root-65 MuiTypography-h5"
    data-testid="typography"
  >
    Heading
  </h5>
</div>
`;

exports[`Typography component renders h6 correctly 1`] = `
<div>
  <h6
    class="MuiTypography-root Typography-root-73 MuiTypography-h6"
    data-testid="typography"
  >
    Heading
  </h6>
</div>
`;

exports[`Typography component renders overline correctly 1`] = `
<div>
  <span
    class="MuiTypography-root Typography-root-113 MuiTypography-overline"
    data-testid="typography"
  >
    Overline
  </span>
</div>
`;

exports[`Typography component renders subtitle1 correctly 1`] = `
<div>
  <h6
    class="MuiTypography-root Typography-root-81 MuiTypography-subtitle1"
    data-testid="typography"
  >
    Hello World
  </h6>
</div>
`;

exports[`Typography component renders subtitle2 correctly 1`] = `
<div>
  <h6
    class="MuiTypography-root Typography-root-89 MuiTypography-subtitle2"
    data-testid="typography"
  >
    Hello World
  </h6>
</div>
`;

exports[`Typography component renders typography variant correctly if variant === default 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-185 MuiTypography-body1"
    data-testid="typography"
  >
    Caption
  </p>
</div>
`;

exports[`Typography component renders typography variant correctly if variant === hero 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-201 MuiTypography-body2"
    data-testid="typography"
  >
    Caption
  </p>
</div>
`;

exports[`Typography component renders typography variant correctly if variant === lead 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-193 MuiTypography-body2"
    data-testid="typography"
  >
    Caption
  </p>
</div>
`;
